// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeSummary should render correctly for buyer 1`] = `
<View
  style={
    [
      {
        "gap": 16,
      },
      {
        "gap": 32,
      },
    ]
  }
>
  <MatchCardCounterparty
    isDispute={false}
    user={
      {
        "id": "seller",
      }
    }
  />
  <TradeInformation />
  <TradeStuff />
</View>
`;

exports[`TradeSummary should render correctly for dispute 1`] = `
<View
  style={
    [
      {
        "gap": 16,
      },
      {
        "gap": 32,
      },
    ]
  }
>
  <MatchCardCounterparty
    isDispute={true}
    user={
      {
        "id": "seller",
      }
    }
  />
  <TradeInformation />
  <TradeStuff />
</View>
`;

exports[`TradeSummary should render correctly for seller 1`] = `
<View
  style={
    [
      {
        "gap": 16,
      },
      {
        "gap": 32,
      },
    ]
  }
>
  <MatchCardCounterparty
    isDispute={false}
    user={
      {
        "id": "buyer",
      }
    }
  />
  <TradeInformation />
  <TradeStuff />
</View>
`;

exports[`TradeSummary should render correctly for showing batch info 1`] = `<PendingPayoutInfo />`;
